# mclone

./: Cargo.toml  README.md
res/images/: minecraft_textures_block_atlas.png.txt
src/: camera.rs  chunk.rs  event.rs  graphics.rs  gui.rs  gui.wgsl  input.rs  light.wgsl  main.rs  mesh.rs  model.rs  player.rs  shader.wgsl  texture.rs
src/world/: chunk.rs  chunk.wgsl  mod.rs
