[package]
name = "mclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.20"
winit = "0.30"
glam = { version = "0.27", features = ["bytemuck"] }
futures = "0.3"
bytemuck = { version = "1.7", features = ["derive"] }
image = "0.25"
anyhow = "1.0"
noise = "0.9"
bitflags = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
