[package]
name = "mclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
anyhow = "1.0"
bitflags = "2.5"
bytemuck = { version = "1.7", features = ["derive"] }
futures = "0.3"
glam = { version = "0.28", features = ["bytemuck"] }
image = "0.25"
noise = "0.9"
rand = { version = "0.8", features = ["small_rng"] }
tobj = { version = "4.0", features = ["async"] }
tokio = { version = "1.0", features = ["rt", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu = "0.20"
winit = "0.30"
